[tool.poetry]
name = "load-testing"
version = "0.1.0"
description = ""
authors = ["David Burke <david@burkesoftware.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.15.1"
requests-toolbelt = "^0.10.1"
ipdb = "^0.13.13"
beautifulsoup4 = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
