[tool.poetry]
name = "load-testing"
version = "1.0.0"
description = ""
authors = [
    "David Burke <david@burkesoftware.com>",
    "Olivier Léger <olivierleger@gmail.com>",
]
license = "AGPLv3"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.31.4"
requests-toolbelt = "^1.0.0"
ipdb = "^0.13.13"
ruff = "^0.11.12"
flake8 = "^7.2.0"

[tool.ruff]
line-length = 88
[tool.ruff.format]
quote-style = "single"  # Preserve is coming soon to ruff
[tool.ruff.lint]
extend-select = [
    "I", # Enable ruff isort
    "Q", # Flake quotes
    "E", # pycodestyle, some needs `--preview` to be enable
    "N", # PEP-8 naming convention
    "UP026", # deprecated mock
    "UP034", # extraneous-parentheses
    "UP039", # Unnecessary parentheses after class definition
    "W1", # Indentation warning
    "W292", # no newline at end of file
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single" # To prefer single quotes over double quote
multiline-quotes = "double"
docstring-quotes = "double"
[tool.ruff.lint.isort]
known-first-party = ["kobo"]

[tool.flake8]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
